--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "sass": "^1.49.7",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.6",
+    "tronweb": "^5.3.2",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
     "web3modal": "^1.9.1"
