--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,16 @@
     "forceConsistentCasingInFileNames": false,
     "isolatedModules": true,
     "noEmit": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+  "compilerOptions": {
+    // ... autres options
+  },
+  "include": [
+    "src/**/*"
+  ]
+}
+
   },
   "include": ["./index.d.ts", "src", "babel.config.js", "**/*.test.ts", "**/*.test.tsx"],
   "exclude": ["node_modules", "vendor", "public"],
