--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ REACT_APP_POLYGON_ALCHEMY_IDS=""
 # - Infura IDs are only used as fallbacks (in conjunction with ALCHEMY_IDS)
 # - multiple IDS should be separated by whitespace
 # - you can pick up INFURA_IDS at https://infura.io/
-REACT_APP_INFURA_IDS="26da974aa2074ddfa1fef7be309e00e1"
+REACT_APP_INFURA_IDS=""
 
 # add a TESTNET ALCHEMY API KEY
 # - only 1 ID is required, multiple IDS should be separated by whitespace
@@ -33,8 +33,8 @@ REACT_APP_ARBITRUM_TESTNET_ALCHEMY=""
 # - in Development node URLs must be insecure `http://`
 REACT_APP_ETHEREUM_SELF_HOSTED_NODE="https://ipAddress:port"
 
-REACT_APP_ARBITRUM_SELF_HOSTED_NODE="https://ipAddress:port"
-REACT_APP_POLYGON_SELF_HOSTED_NODE="https://ipAddress:port"
+REACT_APP_ARBITRUM_SELF_HOSTED_NODE=""
+REACT_APP_POLYGON_SELF_HOSTED_NODE=""
 REACT_APP_AVALANCHE_SELF_HOSTED_NODE="https://api.avax.network/ext/bc/C/rpc"
 REACT_APP_FANTOM_SELF_HOSTED_NODE="https://rpc.fantom.network https://rpc.ftm.tools"
 
@@ -55,13 +55,11 @@ REACT_APP_COVALENT=""
 # Public key from Zapper, ONLY works on MAINNET
 # Zapper keys aren't needed unless you are trying to zap. 
 # Zaps aren't available except on mainnet
-REACT_APP_ZAPPER_API="96e0cc51-a62e-42ca-acee-910ea7d2a241"
-REACT_APP_ZAPPER_POOL="0x04f2694c8fcee23e8fd0dfea1d4f5bb8c352111f"
+REACT_APP_ZAPPER_API=""
+REACT_APP_ZAPPER_POOL=""
 
 # Olympus Give
-# These 2 settings should be toggled to "true" if you want to use Olympus Give features
-REACT_APP_GIVE_ENABLED="false"
-REACT_APP_MOCK_SOHM_ENABLED="false"
 DISABLE_ESLINT_PLUGIN=true
 GENERATE_SOURCEMAP=false
+SKIP_PREFLIGHT_CHECK=true
 ########################
